InternexDev_Sandbox/src/objects/WF_Envelope__c.object
<CustomObject>
    <fields>
        <fullName>Batch_No__c</fullName>
        <label>Batch No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepositDate_LockboxNo_Batch_Transaction__c</fullName>
        <formula>Date__c +  LockBox_Account__c  + Batch_No__c + Transaction_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DepositDate LockboxNo Batch Transaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockBox_Account__c</fullName>
        <label>LockBox Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_No__c</fullName>
        <label>Transaction No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WF Envelope</label>
    <nameField>
        <displayFormat>WFE-{00000}</displayFormat>
        <label>WF Envelope Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF Envelope</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>